[gd_scene load_steps=10 format=3 uid="uid://hc5tauepn14p"]

[ext_resource type="Texture2D" uid="uid://cdj2p6608v3tx" path="res://ressources/bar-empty.png" id="1_b0alv"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_wx50i"]
[ext_resource type="Texture2D" uid="uid://d1h73hjfant7w" path="res://ressources/health-bar-empty.png" id="2_e5osg"]
[ext_resource type="Texture2D" uid="uid://b81f8tblp45v1" path="res://ressources/bar-full.png" id="3_x54ep"]
[ext_resource type="Script" path="res://scripts/character/ProgressHealthBarP1.gd" id="4_gg84o"]
[ext_resource type="Script" path="res://scripts/character/ProgressHealthBarP2.gd" id="5_p5lxg"]
[ext_resource type="PackedScene" uid="uid://bec6xqbhky3bg" path="res://scenes/games/pause_menu.tscn" id="6_vrbdj"]
[ext_resource type="PackedScene" uid="uid://fgmvw0gcgwxo" path="res://scenes/games/animated_platformer_character.tscn" id="7_oiqbu"]
[ext_resource type="PackedScene" uid="uid://fvnf432m46dh" path="res://scenes/games/character_animated.tscn" id="8_6hpug"]

[node name="HUD" type="Node3D"]
script = ExtResource("1_wx50i")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(0, -20)
transform = Transform2D(1, 0, 0, 1, 0, -20)

[node name="ProgressHealthBarP1" type="TextureProgressBar" parent="CanvasLayer" node_paths=PackedStringArray("player1")]
offset_right = 384.0
offset_bottom = 192.0
texture_under = ExtResource("1_b0alv")
texture_over = ExtResource("2_e5osg")
texture_progress = ExtResource("3_x54ep")
texture_progress_offset = Vector2(64, 0)
script = ExtResource("4_gg84o")
player1 = NodePath("../../animated_Platformer_Character")

[node name="ProgressHealthBarP2" type="TextureProgressBar" parent="CanvasLayer" node_paths=PackedStringArray("player2")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -384.0
offset_bottom = 192.0
grow_horizontal = 0
fill_mode = 1
texture_under = ExtResource("1_b0alv")
texture_over = ExtResource("2_e5osg")
texture_progress = ExtResource("3_x54ep")
texture_progress_offset = Vector2(64, 0)
script = ExtResource("5_p5lxg")
player2 = NodePath("../../Character Animated")

[node name="TimerGame" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="LabelTimerGame" type="Label" parent="TimerGame"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_right = 41.0
offset_bottom = 41.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="LabelWinner" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -215.5
offset_right = 289.0
offset_bottom = 215.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
uppercase = true

[node name="TimerRoundEnd" type="Timer" parent="."]
wait_time = 2.0

[node name="Label" type="Label" parent="TimerRoundEnd"]
offset_right = 1.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 20

[node name="PauseMenu" parent="." instance=ExtResource("6_vrbdj")]
visible = false
anchors_preset = -1
anchor_left = 0.482
anchor_top = 0.5
anchor_right = 0.514
anchor_bottom = 0.5

[node name="animated_Platformer_Character" parent="." instance=ExtResource("7_oiqbu")]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 5)

[node name="Character Animated" parent="." instance=ExtResource("8_6hpug")]
